Updates from ShareLaTeX

--- a/final-project/writeup/citations.bib
+++ b/final-project/writeup/citations.bib
@@ -1,3 +1,12 @@
+@incollection{benlecun2007,
+  title={Scaling Learning Algorithms towards AI},
+  author={Yoshua Bengio and Yann LeCun},
+  editor={L. Bottou, O. Chapelle, D. DeCoste, J. Weston},
+  booktitle={Large-Scale Kernel Machines},
+  publisher={MIT Press},
+  year={2007}
+}
+
 @article{lewis2008use,
   title={Use of the noninvasive components of the Mayo score to assess clinical response in ulcerative colitis},
   author={Lewis, James D and Chuai, Shaokun and Nessel, Lisa and Lichtenstein, Gary R and Aberra, Faten N and Ellenberg, Jonas H},
