--- a/final-project/writeup/citations.bib
+++ b/final-project/writeup/citations.bib
@@ -59,3 +59,9 @@
     author={Daniel Nouri},
     url={http://danielnouri.org/notes/2014/12/17/using-convolutional-neural-nets-to-detect-facial-keypoints-tutorial}
 }
+
+@misc{gorr,
+    title={Momentum and Learning Rate Adaptation},
+    author={Genevieve Orr},
+    url={https://www.willamette.edu/~gorr/classes/cs449/momrate.html}
+}
