--- a/final-project/writeup/model_rmse.tex
+++ b/final-project/writeup/model_rmse.tex
@@ -8,11 +8,11 @@
   \hline
 Model & RMSE \\ 
   \hline
-Six Layer & 3.70 \\ 
-  Six Layer with Regularization & 3.98 \\ 
-  Six Layer with Regularization, Dropout & 4.40 \\ 
-  Three Layer & 3.85 \\ 
-  Three Layer with Regularization & 35.21 \\ 
+Inverted Hourglass & 3.70 \\ 
+  Inverted Hourglass with Regularization & 3.98 \\ 
+  Inverted Hourglass with Regularization, Dropout & 4.40 \\ 
+  Baseline & 3.85 \\ 
+  Baseline with Regularization & 35.21 \\ 
    \hline
 \end{tabular}
 \end{table}
